src/objects/NDA__c.object
<CustomObject>
    <fields>
        <fullName>AmendmentSent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Amendment Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AmendmentSigned__c</fullName>
        <label>Amendment Signed</label>
        <picklist>
            <picklistValues>
                <fullName>true</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>false</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approved_By__c</fullName>
        <description>Device Product Lead who actually approved the NDA</description>
        <label>Approved By</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Product Category</label>
        <picklist>
            <picklistValues>
                <fullName>Premium Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Companion Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Companion_MCR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MCR Leave value for companion products</description>
        <label>Companion MCR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Companion_Products__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Product Category Companion</description>
        <label>Companion Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Companion_Prototype__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prototype Leave value for companion products</description>
        <label>Companion Prototype</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Displays contacts for the Outide party selected</inlineHelpText>
        <label>NDA Company Contact</label>
        <referenceTo>NDA_CompanyContact__c</referenceTo>
        <relationshipLabel>NDAs</relationshipLabel>
        <relationshipName>NDAs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>NDA Company</label>
        <referenceTo>NDA_Company__c</referenceTo>
        <relationshipLabel>NDAs</relationshipLabel>
        <relationshipName>NDAs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Connected_Party_Approval_Status__c</fullName>
        <label>Connected Party Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DPLStatus__c</fullName>
        <description>Device Product Lead Status</description>
        <label>DPL Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DPL_Approved_On__c</fullName>
        <description>NDA Approved Date by Device Product Lead</description>
        <label>DPL Approved On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DPL_Comments__c</fullName>
        <description>Comments entered by Device Product Lead when approving/rejecting NDA</description>
        <label>DPL Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Disclosure_Approval_Purpose__c</fullName>
        <description>Describe about why approvals are requested to help Category leads approve requests</description>
        <label>Disclosure Approval Purpose</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disclosure_Period__c</fullName>
        <defaultValue>3</defaultValue>
        <label>Disclosure Period</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Disclosure_Purpose__c</fullName>
        <defaultValue>&quot;In order to evaluate a potential business transaction and/or technical requirements&quot;</defaultValue>
        <label>Disclosure Purpose</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expires_On__c</fullName>
        <label>Expires On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FPL_UserID__c</fullName>
        <description>Family Product Lead User ID</description>
        <label>FPL UserID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GPPD_Color__c</fullName>
        <description>GPPD Product Color. Legacy purposes only</description>
        <label>GPPD Color</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Governing_Law__c</fullName>
        <description>List of all Governing laws per country and State based on Region</description>
        <label>Governing Law</label>
        <picklist>
            <controllingField>NDARegion__c</controllingField>
            <picklistValues>
                <fullName>Alberta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brasil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China P.R.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colombia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Costa Rica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denmark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dominican Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecuador</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>El Salvador</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>England and Wales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guatemala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haiti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honduras</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hong Kong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Internal_Product_ID__c</fullName>
        <description>Product ID from GPPD for Product NDAs. Legacy Purposes only</description>
        <label>Internal Product ID</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsProductNDA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is this Product NDA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Outside_Party_on_Connected_Person__c</fullName>
        <label>Is Outside Party on Connected Person</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_this_Multiparty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is this Multiparty?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_Disclosure_Type__c</fullName>
        <description>This is for legacy purposes</description>
        <label>Legacy Disclosure Type</label>
        <picklist>
            <picklistValues>
                <fullName>Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MCR_Content__c</fullName>
        <label>MCR Content</label>
        <picklist>
            <picklistValues>
                <fullName>Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Show</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Modification_Text__c</fullName>
        <label>Modification Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Motorola_Entity__c</fullName>
        <label>Motorola Entity</label>
        <picklist>
            <picklistValues>
                <fullName>Motorola Mobility LLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013 Intellectual Property Investments, LLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>280 North, Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4thpass Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AirDefense, Inc. a wholly owned subsidiary of Motorola, Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dansk Beredskabskommunikation A/S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digianswer A/S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DP Acquisition 2006, LLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Instrument Authorization Services, Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Instrument Belgium BVBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Instrument Canada Ltd.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Instrument Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Instrument Czech Republic s.r.o.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Instrument de Guatemala S.A.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Instrument del Ecuador Getrument del Ecuador S.A.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Instrument Germany GmbH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Instrument Holdings, Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Instrument Israel LTD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Instrument LLC (Russia)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Instrument Netherlands B.V.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Instrument New Zealand Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Instrument of Taiwan, Ltd.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Instrument Poland sp. z o.o.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Instrument Portugal, Unipessoal LDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Instrument Sweden AB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Instrument Vietnam LLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good Technology, Inc., a wholly owned subsidiary of Motorola, Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hangzhou General Instrument Technologies Ltd.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Engines, Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INO Servs. Esp. de Telecomunications Ltda.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Multiparty_Company__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Multiparty Company</label>
        <referenceTo>NDA_Company__c</referenceTo>
        <relationshipLabel>NDAs (NDA_Company)</relationshipLabel>
        <relationshipName>MultipartyNDAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NDAFileID__c</fullName>
        <label>NDA File ID</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDAID_Migration__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NDAID Migration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDARegion__c</fullName>
        <description>NDA Regions</description>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Asia Pac - Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia Pac - English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia-Pacific (Japan)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia-Pacific (North Asia)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brasil - Portuguese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil  - English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil - Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA - English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe, Middle East &amp; Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe - German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe - Poland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe - Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America - English &amp; Portuguese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America - English &amp; Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America - Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America - English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United Kingdom</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NDAStatus__c</fullName>
        <label>NDA Status</label>
        <picklist>
            <picklistValues>
                <fullName>Save</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executed-Mod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NDA_Color__c</fullName>
        <description>Product Color in NDA. Legacy purposes only</description>
        <label>NDA Color</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDA_Multiparty_Company_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Displays contact for multiparty company selected</inlineHelpText>
        <label>NDA Multiparty Company Contact</label>
        <referenceTo>NDA_CompanyContact__c</referenceTo>
        <relationshipLabel>NDAs (NDA Multiparty Company Contact)</relationshipLabel>
        <relationshipName>NDAs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NDA_Specialist__c</fullName>
        <description>This is to send modification requests to the listed NDA specialists and is controlled by Region field. These are the default values for regions active</description>
        <label>NDA Specialist</label>
        <picklist>
            <controllingField>NDARegion__c</controllingField>
            <picklistValues>
                <fullName>cmwf84@motorola.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>esw001c@motorola.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>mwcp74@motorola.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cwnj83@motorola.com</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NDA_file_signed_date__c</fullName>
        <label>NDA file signed date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Premium_MCR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MCR Leave value for Premium</description>
        <label>Premium MCR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Premium_Products__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Product Category Premium</description>
        <label>Premium Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Premium_Prototype__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prototype Leave value for premium products</description>
        <label>Premium Prototype</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prototype__c</fullName>
        <label>Prototype</label>
        <picklist>
            <picklistValues>
                <fullName>Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Show</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Requested_By_Name__c</fullName>
        <label>Requested By Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <label>Requested By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Motorola Core Directory</label>
        <referenceTo>Motorola_Core_Directory__c</referenceTo>
        <relationshipLabel>NDAs</relationshipLabel>
        <relationshipName>NDAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Software_MCR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MCR Leave value for Software</description>
        <label>Software MCR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Software_Prototype__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prototype Leave value for Software</description>
        <label>Software Prototype</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Software__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Product Category Software</description>
        <label>Software</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Term_of_Protection__c</fullName>
        <defaultValue>5</defaultValue>
        <label>Term of Protection</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ToBeApprovedByID__c</fullName>
        <description>Device Product Lead Assigned for Approval when NDA created</description>
        <label>ToBeApprovedByID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VP_Name_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VP Name 2</label>
        <referenceTo>NDA_Signatory__c</referenceTo>
        <relationshipLabel>NDAs (NDA)</relationshipLabel>
        <relationshipName>NDAVPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VP_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Look up Motorola VP names for the NDA</description>
        <label>VP Name</label>
        <referenceTo>NDA_Signatory__c</referenceTo>
        <relationshipLabel>NDAs</relationshipLabel>
        <relationshipName>NDAs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Value_MCR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MCR Leave value for Value products</description>
        <label>Value MCR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Value_Products__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Product Category Value</description>
        <label>Value Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Value_Prototype__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prototype Leave value for Value products</description>
        <label>Value Prototype</label>
        <type>Checkbox</type>
    </fields>
    <label>NDA</label>
    <listViews>
        <fullName>All</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>NDAFileID__c</columns>
        <columns>Company__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>NDAStatus__c</columns>
        <columns>Is_this_Multiparty__c</columns>
        <columns>NDARegion__c</columns>
        <columns>Motorola_Entity__c</columns>
        <columns>Governing_Law__c</columns>
        <columns>VP_Name__c</columns>
        <columns>Category__c</columns>
        <columns>Expires_On__c</columns>
        <columns>IsProductNDA__c</columns>
        <columns>Company_Contact__c</columns>
        <columns>NDA_Multiparty_Company_Contact__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Company__c</field>
            <operation>contains</operation>
            <value>Skuid</value>
        </filters>
        <label>All</label>
        <sharedTo>
            <role>NDA</role>
            <role>NDA_Specialist</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DPL_Approvals</fullName>
        <columns>NDAFileID__c</columns>
        <columns>Category__c</columns>
        <columns>MCR_Content__c</columns>
        <columns>Prototype__c</columns>
        <columns>ToBeApprovedByID__c</columns>
        <columns>DPL_Comments__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DPLStatus__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <filters>
            <field>IsProductNDA__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>DPL Approvals</label>
    </listViews>
    <nameField>
        <displayFormat>NDA-{00000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NDAs</pluralLabel>
    <recordTypes>
        <fullName>NDA</fullName>
        <active>true</active>
        <label>NDA</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>